# nest-simulator

./: .readthedocs.yml  CMakeLists.txt  Dockerfile.nest-ci  Doxyfile  VERSION  _vale.ini  cross-repo-ci-architecture.md  environment.yml  pyproject.toml  readthedocs.yml
.github/: vale-linter.yml
.github/workflows/: build_nest_wheel.yml  convert-examples.yml  copy_examples.yml  copy_files.yml  cppdocs.yml  docs.yml  downstream-integration.yml  ebrains-push.yml  main.yml  nestbuildmatrix.yml  trigger_example_workflow.yml
build_support/: install_csa-libneurosim.sh
cmake/: ConfigureSummary.cmake  FindPythonModule.cmake
doc/: Doxyfile  README.rst  citing_nest.rst  community.rst  conda_environment.yml  conf.py  contents.rst  dev_docs.rst  download.rst  environment.yml  features.rst  fulldoc.conf.in  getting_help.rst  getting_started.rst  glossary.rst  index.rst  list_func.py  make_links.py  requirements.txt  strip_bracket.py
doc/contribute/: guidelines_mailinglist.rst  index.rst  template_enhancement.rst  template_good_bug_report.rst  template_pullrequest.rst
doc/contribute/templates_styleguides/: mailing_list.rst
doc/examples/: index.rst
doc/full_api/: conf.py  index.rst  nest.html  nest.lib.html  nest.tests.rst  nest.tests.test_sp.rst  nest_html_api.rst
doc/full_api/_modules/: nest.html
doc/guides/: connection_management.rst  index.rst  parallel_computing.rst  random_numbers.rst  running_simulations.rst  simulations_with_gap_junctions.rst  simulations_with_precise_spike_times.rst
doc/htmldoc/: 404.rst  Doxyfile  add_prolog.py  citing-nest.rst  community.rst  conf.py  connect_cpp.rst  connectionManager.uml  connection_manager.rst  devices_cpp.rst  diagram.uml  fulldoc.conf  get-started_index.rst  index.rst  kernel_managers.rst  mathdiagram.rst  prolog-examples.rst  refs.bib  test-breathepage.rst  test-extension.rst  testuml.rst  troubleshooting.rst
doc/htmldoc/_ext/: extract_api_functions.py  get_keywords.py  model_tag_setup.py  new_xml.py  read_cpp.py  read_xml.py  todo.py  versions.json
doc/htmldoc/developer_space/: index.rst
doc/htmldoc/examples/: index.rst
doc/htmldoc/installation/: index.rst  pip_install.rst
doc/htmldoc/model_details/: HillTononiModels.ipynb  IAF_Integration_Singularity.ipynb  IAF_neurons_singularity.ipynb  aeif_models_implementation.ipynb  siegert_neuron_integration.ipynb
doc/htmldoc/models/: index.rst
doc/htmldoc/neurons/: node_handles.rst
doc/htmldoc/synapses/: connection_management.rst  handling_connections.rst  index.rst  synapse_desc.rst  synapse_dynamics.rst  synapse_plasticity.rst  synapse_types.rst
doc/htmldoc/templates/: index.html  layout.html
doc/htmldoc/xml/: DocKeywords.xml  README_8md.xml  ac__generator_8cpp.xml  ac__generator_8h.xml  aeif__cond__alpha_8h.xml  aeif__cond__alpha__multisynapse_8cpp.xml  aeif__cond__alpha__multisynapse_8h.xml  aeif__cond__beta__multisynapse_8cpp.xml  aeif__cond__beta__multisynapse_8h.xml  aeif__cond__exp_8h.xml  aeif__psc__alpha_8h.xml  aeif__psc__delta_8h.xml  aeif__psc__delta__clopath_8h.xml  aeif__psc__exp_8h.xml  amat2__psc__exp_8cpp.xml  (+1041 more)
doc/installation/: index.rst  install_options.rst  linux_install.rst  oldvers_install.rst
doc/microcircuit/: example.rst
doc/models/: aeif.rst  binary.rst  clopath_neuron.rst  clopath_synapse.rst  conductance.rst  cont_delay.rst  current-based.rst  detector.rst  gapjunction.rst  generator.rst  hill_tononi_neuron.rst  hill_tononi_synapse.rst  hodgkin_huxley.rst  iaf.rst  index.rst  inst_rate.rst  music.rst  neurons.rst  parrot.rst  point_process.rst  rate.rst  static.rst  stdp.rst  stp.rst
doc/pynest_apis/: nest.rst
doc/ref_material/: nest.lib.rst  nest.rst  pynest.rst
doc/sli_docs/: neural-simulations.rst  objects-and-data-types.rst
doc/topology/: Topology_UserManual.rst
libnestutil/: CMakeLists.txt
models/: ac_generator.h  aeif_psc_alpha.h  cm_compartmentcurrents.cpp  cm_compartmentcurrents.h  dc_generator.h  gamma_sup_generator.h  glif_cond.h  glif_psc.h  glif_psc_double_alpha.h  hh_psc_alpha.h  iaf_chs_2007.h  iaf_chxk_2008.h  iaf_cond_alpha.h  iaf_cond_beta.h  iaf_psc_alpha.h  iaf_psc_alpha_ps.h  iaf_psc_delta_ps.h  iaf_psc_exp_htum.h  iaf_psc_exp_ps.h  iaf_psc_exp_ps_lossless.h  inhomogeneous_poisson_generator.h  mip_generator.h  multimeter.h  noise_generator.h  poisson_generator.h  poisson_generator_ps.h  ppd_sup_generator.h  pulsepacket_generator.h  sinusoidal_gamma_generator.h  sinusoidal_poisson_generator.h  spike_dilutor.h  spike_generator.h  spike_recorder.h  spin_detector.h  step_current_generator.h  step_rate_generator.h  weight_recorder.h
nestkernel/: archiving_node.cpp  clopath_archiving_node.h  connection_manager.h  io_manager.h  kernel_manager.h  manager_interface.h  recording_backend.h  recording_backend_ascii.h  recording_backend_memory.h  recording_backend_mpi.h  recording_backend_screen.h  recording_backend_sionlib.h  recording_device.h  simulation_manager.h  stimulation_backend.h  stimulation_backend_mpi.h  stimulation_device.h  vp_manager.h
pynest/: CMakeLists.txt  README.rst
pynest/examples/: BrodyHopfield.py  CampbellSiegert.py  README.rst  aeif_cond_beta_multisynapse.py  balancedneuron.py  brette_gerstner_fig_2c.py  brette_gerstner_fig_3d.py  brunel_alpha_evolution_strategies.py  brunel_alpha_nest.py  brunel_delta_nest.py  brunel_exp_multisynapse_nest.py  brunel_siegert_nest.py  clopath_synapse_small_network.py  clopath_synapse_spike_pairing.py  correlospinmatrix_detector_two_neuron.py  cross_check_mip_corrdet.py  csa_example.py  csa_spatial_example.py  evaluate_quantal_stp_synapse.py  evaluate_tsodyks2_synapse.py  gap_junctions_inhibitory_network.py  gap_junctions_two_neurons.py  gif_cond_exp_multisynapse.py  gif_pop_psc_exp.py  gif_population.py  glif_cond_neuron.py  glif_psc_neuron.py  hh_phaseplane.py  hh_psc_alpha.py  hpc_benchmark.py  if_curve.py  intrinsic_currents_spiking.py  intrinsic_currents_subthreshold.py  lin_rate_ipn_network.py  mc_neuron.py  multimeter_file.py  one_neuron.py  one_neuron_with_noise.py  plot_weight_matrices.py  precise_spiking.py  (+16 more)
pynest/nest/: __init__.py
(+1811 files in other folders)
