[build-system]
requires = ["scikit-build-core",
    "cython>=0.28.3,<=3.0.12",
    "setuptools>=61",
    "wheel"
    ]
build-backend = "scikit_build_core.build"

[project]
name = "pynest-ng"
dynamic = ["version"]
description = "NEST is a simulator for spiking neural network models that focuses on the dynamics, size and structure of neural systems rather than on the exact morphology of individual neurons."
keywords = ["nest", "simulator", "neuroscience", "neural", "neuron", "network", "ai", "spike", "spiking"]
readme = "README.md"
license.file = "LICENSE"
authors = [
  { name = "NEST Initiative", email = "users@nest-simulator.org" },
]
maintainers = [
  { name = "Steffen Graber", email = "s.graber@fz-juelich.de" },
]
requires-python = ">=3.10, <4.0"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: C++",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Typing :: Typed",
]
dependencies = [
  "cython>=0.28.3,<=3.0.12",
  "numpy>=1.21.0",
  "scipy>=1.7.0",
  "pandas>=1.3.0",
  "matplotlib>=3.3.0",
  "mpi4py>=3.1.0",
  "h5py>=3.1.0"
]

[project.optional-dependencies]
server = [
  "Flask",
  "flask-cors",
  "gunicorn",
  "requests",
  "RestrictedPython"
]
test = [
  "pytest",
  "pytest-cov",
  "pytest-xdist",
  "flake8",
  "black",
  "isort",
  "mypy"
]
docs = [
  "sphinx >= 6.2.1",
  "sphinx_rtd_theme",
  "sphinx_autobuild",
  "sphinx_gallery",
  "sphinx-tabs",
  "sphinx_design",
  "sphinx-material",
  "sphinx-copybutton",
  "sphinx-carousel",
  "sphinx-notfound-page",
  "sphinxcontrib-mermaid",
  "sphinxcontrib-plantuml",
  "nbsphinx",
  "numpydoc",
  "example",
  "Image",
  "breathe",
  "csvkit",
  "docutils",
  "PyYAML >= 4.2b1",
  "tqdm",
  "yamllint"
]
examples = [
  "networkx",
  "seaborn",
  "ipython",
  "cycler",
  "imageio",
  "requests"
]
full = [
  # Examples dependencies (non-duplicated)
  "networkx", "seaborn", "ipython", "cycler", "imageio", "requests",
  # Additional tools
  "nestml",
  "nest-desktop",
  # Development tools
  "jupyter", "jupyterlab", "notebook"
]

[project.urls]
Homepage = "https://nest-simulator.org/"
Documentation = "https://nest-simulator.readthedocs.io/en/stable/"
"Bug Tracker" = "https://github.com/nest/nest-simulator/issues"
Changelog = "https://nest-simulator.readthedocs.io/en/stable/whats_new/index.html"

[tool.scikit-build]
sdist.cmake = false
build-dir = "build/{wheel_tag}"
metadata.version.provider = "scikit_build_core.metadata.regex"
metadata.version.input = "VERSION"
metadata.version.regex = "(?P<value>.*)"
# Conditional exclusions based on package type
wheel.exclude = [
  ".git*",           # Always exclude git files
  ".github/",        # Always exclude CI configuration
  "build_support/",  # Always exclude build tools
  "docs/",           # Exclude docs from minimal package (full package will override)
]

[tool.scikit-build.cmake.define]
with-optimize = "-O2"
with-warning = "ON"
with-python = "ON"
with-boost = "ON"
with-gsl = "ON"
with-openmp = "ON"
with-sonata = "ON"

[tool.cibuildwheel]
build-frontend = "default"
build = ["cp310-*", "cp311-*", "cp312-*", "cp313-*"]
skip = "*-win* *-manylinux_i686" # Skip Windows and 32-bit builds
test-skip = ""
archs = ["auto64"]  # Only 64-bit architectures
config-settings = {}
dependency-versions = "pinned"
environment-pass = []
build-verbosity = 2
before-all = """
  NEST_SRC_DIR=${PWD}
  if [ $AUDITWHEEL_POLICY == "musllinux_1_2" ]
  then
    apk add git libc6-compat gsl gsl-dev wget bzip2 hdf5 cmake
  else
    yum install -y git glibc glibc-devel gsl gsl-devel wget bzip2 hdf5 cmake
  fi
  # Install boost
  if [[ "$OSTYPE" == "darwin"* ]]; then
    echo "Build OS"
    echo $OSTYPE
    brew install llvm libomp boost gsl graphviz
    brew link --force libomp
    echo "arch: $(arch)"
    if [[ $(arch) == 'arm64' ]]; then
      LDFLAGS="-L/opt/homebrew/lib"
      CPPFLAGS="-I/opt/homebrew/include"
    else
      LDFLAGS="-L/usr/local/lib"
      CPPFLAGS="-I/usr/local/include"
    fi
    hash -r
  else
    wget https://archives.boost.io/release/1.88.0/source/boost_1_88_0.tar.bz2
    tar --bzip2 -xf boost_1_88_0.tar.bz2
    cd boost_1_88_0
    ./bootstrap.sh
    ./b2 install
  fi
"""

# Only specify the images you actually use
container-engine = "docker"
manylinux-x86_64-image = "manylinux2014"
manylinux-aarch64-image = "manylinux2014"
musllinux-x86_64-image = "musllinux_1_2"
musllinux-aarch64-image = "musllinux_1_2"


[[tool.cibuildwheel.overrides]]
select = "*-macos*"
inherit.environment = "append"
environment = { MACOSX_DEPLOYMENT_TARGET = "15.0" }


[tool.cibuildwheel.linux]
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"

[tool.cibuildwheel.macos]
repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"

[tool.cibuildwheel.windows]

[tool.cibuildwheel.pyodide]

[tool.isort]
profile = "black"
known_third_party = "nest"

[tool.black]
line-length = 120
