[build-system]
requires = ["scikit-build-core",
    "cython>=0.28.3",
    "setuptools>=61",
    "wheel"
    ]
build-backend = "scikit_build_core.build"


[project]
name = "pynest-ng"
dynamic = ["version"]
description = "NEST is a simulator for spiking neural network models that focuses on the dynamics, size and structure of neural systems rather than on the exact morphology of individual neurons."
keywords = ["nest", "simulator", "neuroscience", "neural", "neuron", "network", "ai", "spike", "spiking"]
readme = "README.md"
license.file = "LICENSE"
authors = [
  { name = "NEST Initiative", email = "users@nest-simulator.org" },
]
maintainers = [
  { name = "Steffen Graber", email = "s.graber@fz-juelich.de" },
]
requires-python = ">=3.9, <4.0"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: C++",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Typing :: Typed",
]
dependencies = [
  "cython >= 0.28.3",
  "numpy",
  "matplotlib"
]

[project.optional-dependencies]
server = [
  "Flask",
  "flask-cors",
  "gunicorn",
  "requests",
  "RestrictedPython"
]
test = [
  "pytest",
  "pytest-cov",
  "pytest-xdist",
  "flake8",
  "black",
  "isort",
  "mypy",
  "scipy",
  "pandas"
]
docs = [
  "sphinx >= 6.2.1",
  "sphinx_rtd_theme",
  "sphinx_autobuild",
  "sphinx_gallery",
  "sphinx-tabs",
  "sphinx_design",
  "sphinx-material",
  "sphinx-copybutton",
  "sphinx-carousel",
  "sphinx-notfound-page",
  "sphinxcontrib-mermaid",
  "sphinxcontrib-plantuml",
  "nbsphinx",
  "numpydoc",
  "example",
  "Image",
  "breathe",
  "csvkit",
  "docutils",
  "PyYAML >= 4.2b1",
  "tqdm",
  "yamllint"
]
examples = [
  "networkx",
  "seaborn",
  "ipython",
  "cycler",
  "imageio",
  "requests"
]
sonata = [
  "h5py>=3.8.0",
]
full = [
  # Examples dependencies (non-duplicated)
  "networkx", "seaborn", "ipython", "cycler", "imageio", "requests",
  # Sonata support
  "h5py>=3.8.0",
  # Additional tools
  "nestml",
  "nest-desktop",
  # Development tools
  "jupyter", "jupyterlab", "notebook"
]

[project.urls]
Homepage = "https://nest-simulator.org/"
Documentation = "https://nest-simulator.readthedocs.io/en/stable/"
"Bug Tracker" = "https://github.com/nest/nest-simulator/issues"
Changelog = "https://nest-simulator.readthedocs.io/en/stable/whats_new/index.html"

[tool.scikit-build]
sdist.cmake = false
build-dir = "build/{wheel_tag}"
metadata.version.provider = "scikit_build_core.metadata.regex"
metadata.version.input = "VERSION"
metadata.version.regex = "(?P<value>.*)"
# Conditional exclusions based on package type
wheel.exclude = [
  ".git*",           # Always exclude git files
  ".github/",        # Always exclude CI configuration
  "build_support/",  # Always exclude build tools
  "docs/",           # Exclude docs from minimal package (full package will override)
]

[tool.scikit-build.cmake.define]
with-optimize = "-O2"
with-warning = "ON"
with-python = "ON"
with-boost = "ON"
with-gsl = "ON"
with-openmp = "ON"
with-hdf5 = "OFF"
with-sonata = "OFF"

[tool.cibuildwheel]
build-frontend = "default"
build = ["cp39-*", "cp310-*", "cp311-*", "cp312-*", "cp313-*"]
skip = "*-win* *-manylinux_i686" # Skip
test-skip = ""
test-requires = [
  "isort",
  "junitparser",
  "matplotlib",
  "mypy",
  "numpy",
  "pandas",
  "pytest",
  "pytest-cov",
  "pytest-xdist",
  "scipy",
]
test-command = """
  python -c "import nest; print(f'NEST {nest.__version__} imported successfully')" &&
  python -c "import nest; nest.ResetKernel(); print('NEST kernel reset successful')" &&
  python -c "import nest; n = nest.Create('iaf_psc_alpha'); print(f'Created neuron: {n}')" &&
  python -c "try: import nest.lib.hl_api_sonata; print('Sonata support: AVAILABLE')\nexcept ImportError: print('Sonata support: NOT AVAILABLE')"
  ## TODO: Enable tests when test suite is ready
  # && pytest {package}/testsuite/pytests/ -v --tb=short -x --maxfail=5 --ignore={package}/testsuite/pytests/mpi/
"""
archs = ["auto64"]
config-settings = {}
dependency-versions = "pinned"
environment-pass = ["CIBW_BUILD_VERBOSITY"]
build-verbosity = 1
before-all =  """
  set -e
  export MAKEFLAGS="-j2"
  NEST_SRC_DIR=${PWD}
  # Clean up any existing build artifacts
  rm -rf build/ *.so *.c 2>/dev/null || true

  # Install system dependencies
  if [[ "$OSTYPE" == "darwin"* ]]; then
    echo "Build OS: $OSTYPE"
    echo "Architecture: $(arch)"
    brew install llvm libomp boost gsl libtool open-mpi graphviz ncurses cmake hdf5
    brew link --force libomp
    # Enable Sonata on macOS where HDF5 is available
    export NEST_ENABLE_SONATA=ON
    if [[ $(arch) == 'arm64' ]]; then
      export LDFLAGS="-L/opt/homebrew/lib"
      export CPPFLAGS="-I/opt/homebrew/include"
    else
      export LDFLAGS="-L/usr/local/lib"
      export CPPFLAGS="-I/usr/local/include"
    fi
    hash -r
  elif [ "${AUDITWHEEL_POLICY:-}" = "musllinux_1_2" ]; then
    apk add --no-cache git libc6-compat gsl gsl-dev wget bzip2 cmake boost-dev hdf5-dev
    # Enable Sonata on Alpine where HDF5 is available
    export NEST_ENABLE_SONATA=ON
  elif command -v yum >/dev/null 2>&1; then
    yum install -y git glibc glibc-devel gsl gsl-devel wget bzip2 cmake make gcc gcc-c++
    # Skip HDF5/Sonata on manylinux to avoid version conflicts
    export NEST_ENABLE_SONATA=OFF
    # Install boost from source on manylinux
    wget -q https://archives.boost.io/release/1.88.0/source/boost_1_88_0.tar.bz2
    tar --bzip2 -xf boost_1_88_0.tar.bz2
    cd boost_1_88_0
    ./bootstrap.sh --with-libraries=system,filesystem,program_options
    ./b2 -j2 --prefix=/usr/local install
    cd ..
    rm -rf boost_1_88_0*
  elif command -v apt-get >/dev/null 2>&1; then
    apt-get update
    apt-get install -y git build-essential gsl-bin libgsl-dev wget bzip2 cmake libboost-all-dev libhdf5-dev
    # Enable Sonata on Debian/Ubuntu where HDF5 is available
    export NEST_ENABLE_SONATA=ON
  else
    echo "Unknown package manager, trying to continue..."
    export NEST_ENABLE_SONATA=OFF
  fi

  # Set CMake options based on platform detection
  if [ "${NEST_ENABLE_SONATA:-OFF}" = "ON" ]; then
    echo "Enabling Sonata support with system HDF5"
    export CMAKE_ARGS="${CMAKE_ARGS} -Dwith-hdf5=ON -Dwith-sonata=ON"
  else
    echo "Disabling Sonata support"
    export CMAKE_ARGS="${CMAKE_ARGS} -Dwith-hdf5=OFF -Dwith-sonata=OFF"
  fi

  """
# Only the images actually in use
container-engine = "docker"
manylinux-x86_64-image = "manylinux2014"
manylinux-aarch64-image = "manylinux2014"
musllinux-x86_64-image = "musllinux_1_2"
musllinux-aarch64-image = "musllinux_1_2"

[[tool.cibuildwheel.overrides]]
select = "*-macos*"
inherit.environment = "append"
environment = { MACOSX_DEPLOYMENT_TARGET = "15.0" }
test-requires = [
  "h5py>=3.8.0",
  "isort",
  "junitparser",
  "matplotlib",
  "mypy",
  "numpy",
  "pandas",
  "pytest",
  "pytest-cov",
  "pytest-xdist",
  "scipy",
]

[[tool.cibuildwheel.overrides]]
select = "*-musllinux*"
inherit.test-requires = "append"
test-requires = ["h5py>=3.8.0"]

[[tool.cibuildwheel.overrides]]
select = "*-manylinux_aarch64"
environment = { MAKEFLAGS = "-j1" }  # Reduce parallelism for ARM builds

[[tool.cibuildwheel.overrides]]
select = "*-manylinux2014*"
inherit.test-requires = "append"
test-requires = []  # No h5py for manylinux builds (no Sonata support)

[tool.cibuildwheel.linux]
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"

[tool.cibuildwheel.macos]
repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"

[tool.isort]
profile = "black"
known_third_party = "nest"

[tool.black]
line-length = 120
